# rustfmt-syntax

./: Cargo.toml
libarena/: Cargo.toml
libgraphviz/: Cargo.toml
librustc_data_structures/: Cargo.toml  lib.rs
librustc_error_codes/: Cargo.toml
librustc_errors/: Cargo.toml
librustc_feature/: Cargo.toml
librustc_fs_util/: Cargo.toml
librustc_index/: Cargo.toml
librustc_lexer/: Cargo.toml
librustc_macros/: Cargo.toml
librustc_parse/: Cargo.toml
librustc_session/: Cargo.toml  lib.rs
librustc_target/: Cargo.toml
libserialize/: Cargo.toml
libsyntax/: Cargo.toml
libsyntax_pos/: Cargo.toml
