[dependencies.rustc_data_structures]
package = "rustfmt_data_structures"
path = "../librustc_data_structures"

[dependencies.smallvec]
features = ["union", "may_dangle"]
version = "1.0"

[lib]
name = "arena"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_arena"
version = "0.0.0"
