[dependencies]
annotate-snippets = "0.6.1"
atty = "0.2"
log = "0.4"
term_size = "0.3.1"
termcolor = "1.0"
unicode-width = "0.1.4"

[dependencies.rustc_data_structures]
package = "rustfmt_data_structures"
path = "../librustc_data_structures"

[dependencies.rustc_serialize]
package = "rustfmt_serialize"
path = "../libserialize"

[dependencies.syntax_pos]
package = "rustfmt_syntax_pos"
path = "../libsyntax_pos"

[lib]
doctest = false
name = "rustc_errors"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_errors"
version = "0.0.0"
