[dependencies]
lazy_static = "1.0.0"

[dependencies.rustc_data_structures]
package = "rustfmt_data_structures"
path = "../librustc_data_structures"

[dependencies.syntax_pos]
package = "rustfmt_syntax_pos"
path = "../libsyntax_pos"

[lib]
doctest = false
name = "rustc_feature"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_feature"
version = "0.0.0"
