[dependencies.rustc_serialize]
package = "rustfmt_serialize"
path = "../libserialize"

[dependencies.smallvec]
features = ["union", "may_dangle"]
version = "1.0"

[lib]
doctest = false
name = "rustc_index"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_index"
version = "0.0.0"
