[dependencies]
unicode-xid = "0.2.0"

[lib]
doctest = false
name = "rustc_lexer"

[package]
authors = ["The Rust Project Developers"]
description = "Rust lexer used by rustc. No stability guarantees are provided.\n"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "rustfmt_lexer"
repository = "https://github.com/rust-lang/rust/"
version = "0.1.0"
