[dependencies]
bitflags = "1.2.1"
lazy_static = "1.0.0"
log = "0.4"
scoped-tls = "1.0"

[dependencies.errors]
package = "rustfmt_errors"
path = "../librustc_errors"

[dependencies.rustc_data_structures]
package = "rustfmt_data_structures"
path = "../librustc_data_structures"

[dependencies.rustc_error_codes]
package = "rustfmt_error_codes"
path = "../librustc_error_codes"

[dependencies.rustc_feature]
package = "rustfmt_feature"
path = "../librustc_feature"

[dependencies.rustc_index]
package = "rustfmt_index"
path = "../librustc_index"

[dependencies.rustc_lexer]
package = "rustfmt_lexer"
path = "../librustc_lexer"

[dependencies.rustc_macros]
package = "rustfmt_macros"
path = "../librustc_macros"

[dependencies.rustc_serialize]
package = "rustfmt_serialize"
path = "../libserialize"

[dependencies.rustc_session]
package = "rustfmt_session"
path = "../librustc_session"

[dependencies.smallvec]
features = ["union", "may_dangle"]
version = "1.0"

[dependencies.syntax_pos]
package = "rustfmt_syntax_pos"
path = "../libsyntax_pos"

[lib]
doctest = false
name = "syntax"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_syntax"
version = "0.0.0"
