[dependencies]
cfg-if = "0.1.2"
log = "0.4"
scoped-tls = "1.0"
unicode-width = "0.1.4"

[dependencies.arena]
package = "rustfmt_arena"
path = "../libarena"

[dependencies.rustc_data_structures]
package = "rustfmt_data_structures"
path = "../librustc_data_structures"

[dependencies.rustc_index]
package = "rustfmt_index"
path = "../librustc_index"

[dependencies.rustc_macros]
package = "rustfmt_macros"
path = "../librustc_macros"

[dependencies.rustc_serialize]
package = "rustfmt_serialize"
path = "../libserialize"

[lib]
doctest = false
name = "syntax_pos"
path = "lib.rs"

[package]
authors = ["The Rust Project Developers"]
edition = "2018"
name = "rustfmt_syntax_pos"
version = "0.0.0"
